# IGSIO

./: CMakeLists.txt  CTestConfig.cmake  IGSIOConfig.cmake.in
.github/workflows/: ci.yml  cmake-single-platform.yml
CMake/: GenerateIGSIOConfig.cmake  IGSIOMacros.cmake
IGSIOCalibration/: CMakeLists.txt  vtkIGSIOAbstractCalibrationAlgo.cxx  vtkIGSIOAbstractCalibrationAlgo.h  vtkIGSIOLandmarkDetectionAlgo.cxx  vtkIGSIOPivotCalibrationAlgo.cxx  vtkIGSIOPivotCalibrationAlgo.h  vtkIGSIOSpinCalibrationAlgo.cxx  vtkIGSIOSpinCalibrationAlgo.h
IGSIOCommon/: igsioMath.cxx
Source/: CMakeLists.txt
Source/IGSIOCalibration/: CMakeLists.txt
Source/IGSIOCalibration/Testing/: CMakeLists.txt  vtkPivotDetectionTest.cxx  vtkStylusCalibrationTest.cxx
Source/IGSIOCalibration/vtkLandmarkDetectionAlgo/: vtkIGSIOLandmarkDetectionAlgo.cxx  vtkIGSIOLandmarkDetectionAlgo.h
Source/IGSIOCalibration/vtkPivotCalibrationAlgo/: vtkIGSIOPivotCalibrationAlgo.cxx  vtkIGSIOPivotCalibrationAlgo.h
Source/IGSIOCommon/: CMakeLists.txt  igsioCommon.cxx  igsioCommon.h  igsioMath.cxx  igsioMath.h  igsioTrackedFrame.cxx  igsioTrackedFrame.h  igsioVideoFrame.cxx  igsioVideoFrame.h  igsioXmlUtils.h  vtkIGSIOConfig.cxx  vtkIGSIOConfig.h  vtkIGSIOLogger.cxx  vtkIGSIOLogger.h  vtkIGSIOTrackedFrameList.cxx  vtkIGSIOTrackedFrameList.h  vtkIGSIOTransformRepository.cxx  vtkIGSIOTransformRepository.h  vtkTrackedFrameList.cxx  vtkTrackedFrameList.h
Source/IGSIOCommon/IO/: vtkIGSIOMKVSequenceIO.cxx  vtkIGSIOMKVSequenceIO.h  vtkIGSIOMetaImageSequenceIO.cxx  vtkIGSIOMetaImageSequenceIO.h  vtkIGSIONrrdSequenceIO.cxx  vtkIGSIONrrdSequenceIO.h  vtkIGSIOSequenceIO.cxx  vtkIGSIOSequenceIO.h  vtkIGSIOSequenceIOBase.cxx  vtkIGSIOSequenceIOBase.h
Source/IGSIOCommon/Testing/: CMakeLists.txt  igsioCommonTest.cxx  vtkIGSIOLoggerTest.cxx  vtkMetaImageSequenceIOTest.cxx  vtkTransformRepositoryTest.cxx
Source/SequenceIO/: vtkIGSIOMKVSequenceIO.cxx  vtkIGSIOMetaImageSequenceIO.cxx  vtkIGSIONrrdSequenceIO.cxx  vtkIGSIOSequenceIO.cxx  vtkIGSIOSequenceIO.h  vtkIGSIOSequenceIOBase.cxx
Source/SequenceIO/Testing/: CMakeLists.txt  vtkMKVReaderTest.cxx  vtkMKVWriterTest.cxx  vtkMetaImageSequenceIOTest.cxx  vtkMkvSequenceIOTest.cxx
Source/VideoIO/: CMakeLists.txt  vtkGenericVideoReader.h  vtkGenericVideoWriter.h
Source/VideoIO/MKV/: vtkMKVReader.cxx  vtkMKVReader.h  vtkMKVUtil.h  vtkMKVWriter.cxx
Source/VideoIO/Testing/: CMakeLists.txt
SuperBuild/: External_libwebm.cmake
